fix: preventing text overflow in subtasks

--- a/styles/task_form.css
+++ b/styles/task_form.css
@@ -20,6 +20,7 @@
     flex-direction: column;
     flex: 1;
     gap: 24px;
+    min-width: 250px;
 }
 
 .textarea_height{
@@ -125,7 +126,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 56px;
     border-radius: 10px;
     padding: 7px 16px;
     margin: 1px 0;
@@ -237,7 +237,25 @@ button.input_field{
 
 .subtask_bulletpoint{
     position: relative;
-    padding: 6px 16px 6px 30px;
+    padding: 6px 66px 6px 38px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.subtask_bulletpoint::before {
+    content: "•";
+    position: absolute;
+    left: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 16px;
+    color: black;
 }
 
 .subtask_bulletpoint:hover{
@@ -248,6 +266,14 @@ button.input_field{
 
 .subtask_bulletpoint:hover .subtask_input_icon_wrapper{
     color: #2A3647;
+}
+
+.subtask_bulletpoint span{
+    flex: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;   
+    width: 100%;
 }
 
 .icon_separator_task{
@@ -274,11 +300,15 @@ button.input_field{
 }
 
 .subtask_icon_wrapper {
+    /* flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    gap: 8px;  */
     position: absolute;
     display: flex;
     align-items: center;
     height: 100%;
-    right: 12px;
+    right: 8px;
     top: 0;
     gap: 4px;
     cursor: pointer;
@@ -301,6 +331,7 @@ button.input_field{
 .edit_subtask_input{
     width: 100%;
     padding: 4px 16px;
+    padding-right: 68px;
     font-size: 16px;
     background-color: white;
     border-top: none;
@@ -340,6 +371,20 @@ button.input_field{
     bottom: -18px;
     font-size: 12px;
     color: var(--c-warn);
+}
+
+#subtask_input{
+    padding-right: 84px;
+}
+
+#task_assignedto_button{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+#medium{
+    flex-wrap: wrap;
 }
 
 @media(max-width: 1000px){
